# mstar

./: .gitignore  README.md  attack.py  eval.ipynb  pyproject.toml  requirements.txt  train.ipynb  train.py
checkpoints/: dataset_info.pth
checkpoints/atrnet_star/efficientnet_b3/seed_0/: best_model.pth  final_model.pth  history.json  metrics.json  resume_checkpoint.pth
checkpoints/atrnet_star/efficientnet_b3/seed_1/: best_model.pth  final_model.pth  history.json  metrics.json  resume_checkpoint.pth
checkpoints/atrnet_star/efficientnet_b3/seed_2/: best_model.pth  (+4 more)
checkpoints/mstar/: best_model.pth  dataset_info.pth  resume_checkpoint.pth
checkpoints/vit_b_16/seed_0/: best_model.pth  final_model.pth  metrics.json  resume_checkpoint.pth
checkpoints/vit_b_16/seed_1/: best_model.pth  final_model.pth  history.json  metrics.json  resume_checkpoint.pth
checkpoints/vit_b_16/seed_2/: best_model.pth  final_model.pth  history.json  metrics.json  resume_checkpoint.pth
checkpoints/vit_b_16/seed_3/: best_model.pth  final_model.pth  history.json  metrics.json  resume_checkpoint.pth
checkpoints/vit_b_16/seed_4/: best_model.pth  final_model.pth  resume_checkpoint.pth
results/atrnet_star/: atrnet_attksum.csv  atrnet_trainsum.csv
results/mstar/: attack_results.csv
slurm/: aggregate_results.sh  env_setup.sh  slurm_attack.sh  slurm_train.sh  submit.sh
src/mstar/: eval.ipynb  train.ipynb
src/sar_atr/: __init__.py  attack.py  attack_visualisation.ipynb  attacks.py  config.py  datasets.py  engine.py  models.py  train.py  utils.py  vis.py  visualisation.ipynb
(+308 files in other folders)
