[project]
name = "mstar"
version = "0.2.0"
description = "Adversarial vulnerability evaluation of SAR ATR systems across a domain gap (MSTAR -> ATRNet-STAR)."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "ipykernel>=6.25",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
    "torch>=2.0",
    "torchvision>=0.15",
    "tqdm>=4.65",
    "torchattacks>=3.5.1",
    "kagglehub>=0.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# timm gives us ViT-B and EfficientNet-B3 with more modern pretraining recipes
# than torchvision. Optional so that a slim install still works.
timm = ["timm>=1.0"]

[project.scripts]
sar-atr-train = "sar_atr.train:main"
sar-atr-attack = "sar_atr.attack:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sar_atr"]
